<resources>
    <string name="app_name">Thelon</string>
    <string name="signup"><u>Sign up</u></string>
    <string name="login"><u>Log in</u></string>
    <string name="view_more"><u>View More</u></string>
    <string name="facebook_app_id">235678706877383</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_foundation__main">Foundation_Main</string>

    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price_mock" translatable="false">$25</string>
    <string name="requests_count_mock" translatable="false">50</string>

    <string name="weight_mock" translatable="false">50 oz</string>
    <string name="weight_badge" translatable="false">WEIGHT</string>
    <string name="pledge_mock" translatable="false">$150</string>


    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="rating_mock" translatable="false">(26)</string>



    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>

    <string name="deadline_time_mock" translatable="false">24 minutes</string>
    <string name="request_btn_text" translatable="false">REQUEST</string>
    <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
    <string name="content_from1_mock">W 90th St</string>
    <string name="content_from2_mock">New York, NY 10025</string>
    <string name="content_to1_mock">46th Ave</string>
    <string name="content_to2_mock">Woodside, NY 11101</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="host_badge" translatable="false">HOST</string>
    <string name="volunteers_count_badge" translatable="false">VOLUNTEERS</string>
    <string name="points_badge" translatable="false">POINTS</string>
    <string name="from_badge" translatable="false">DATE</string>
    <string name="to_badge" translatable="false">LOCATION</string>
    <string name="delivery_date_badge" translatable="false">CONTACT</string>
    <string name="deadline_badge" translatable="false">EVENT TYPE</string>
</resources>
